Core: Address review feedback and add manifest compression properties